--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -689,7 +689,7 @@ section {
 }
 
 .resume .section-title {
-  text-align: center;
+  text-align: relative;
   margin-bottom: 40px;
 }
 
@@ -976,7 +976,7 @@ section {
 }
 
 .contact .section-title {
-  text-align: center;
+  text-align: relative;
   margin-bottom: 40px;
 }
 
